cmake_minimum_required(VERSION 3.26)
project(untitled17)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled17 main.cpp
        Tree.cpp
        Tree.h
        Item.cpp
        Item.h
        AVLTree.cpp
        AVLTree.h
        AVLNode.cpp
        AVLNode.h
        Menu.cpp
        Menu.h
        BST.cpp
        BST.h
        BSTNode.cpp
        BSTNode.h
        Heap.cpp
        Heap.h
        ComparisonFunctions.h)
