cmake_minimum_required(VERSION 3.26)
project(untitled19)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled19  Item.cpp
        Item.h
        main.cpp
        Tree.cpp
        Tree.h
        AVLTree.cpp
        AVLTree.h
        AVLNode.cpp
        AVLNode.h
        Menu.cpp
        Menu.h
        BST.cpp
        BST.h
        BSTNode.cpp
        BSTNode.h
        Heap.cpp
        Heap.h
        ComparisonFunctions.h
        ComparisonFunction.cpp)